# wa-transcribe

./: .gitignore  CONTRIBUTING.md  README.md  check_health.py  config.py  helpers.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  core.py  db.py  health.py  maintenance.py  monitor.py  setup.py  transcriber.py  utils.py
tests/: test_cli.py  test_config.py  test_config_extended.py  test_core.py  test_core_extended.py  test_database.py  test_db.py  test_fuzz.py  test_health.py  test_health_extended.py  test_maintenance.py  test_monitor.py  test_setup.py  test_setup_logic.py  test_setup_wizard.py  test_transcriber.py  test_utils.py  test_utils_extended.py
