[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wa-transcriber"
version = "1.1.0"
description = "Automated local WhatsApp voice note transcriber"
readme = "README.md"
authors = [{ name = "Jean Paul Fernandez", email = "hello@jpxoi.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["whatsapp", "whisper", "transcription", "automation", "audio"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "openai-whisper>=20231117",
    "pyperclip",
    "watchdog",
    "torch",
    "colorama",
    "tqdm",
    "questionary>=2.1.1",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/jpxoi/wa-transcriber"
Issues = "https://github.com/jpxoi/wa-transcriber/issues"

[project.scripts]
wa-transcriber = "app.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.uv.sources]
wa-transcriber = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "wa-transcriber",
]
