[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wa-transcriber"
version = "1.1.0"
description = "Automated local WhatsApp voice note transcriber"
readme = "README.md"
authors = [{ name = "Jean Paul Fernandez", email = "hello@jpxoi.com" }]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["whatsapp", "whisper", "transcription", "automation", "audio"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "openai-whisper>=20231117",
    "pyperclip",
    "watchdog",
    "torch",
    "colorama",
    "tqdm",
    "questionary>=2.1.1",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/jpxoi/wa-transcriber"
Issues = "https://github.com/jpxoi/wa-transcriber/issues"

[project.scripts]
wa-transcriber = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.uv.sources]
wa-transcriber = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
exclude = [".venv", ".tox", ".eggs", "build", "dist", "__pycache__", "venv"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "wa-transcriber",
]
